# nomothetisAI

./: .gitignore  README.md  frontend_implementation_steps.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/features/field_4/: config.py  prompt.py  router.py
app/features/field_4/services/: article_splitter.py  llm_service.py  (+1 more)
app/features/field_6/: config.py  prompt.py  router.py  schemas.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/features/field_23/: .env.example  README.md  router.py  schemas.py
backend/app/features/field_23/data/: comments_5053.xls  convert_comments_xls_to_json.py  legislative_comments.json
backend/app/features/field_23/models/: __init__.py  comparison_domain.py
backend/app/features/field_23/services/comments/: __init__.py  attribution_prompts.py  consultation_report.py  llm_attribution.py  loader.py
backend/app/features/field_23/services/comparison/: __init__.py  differ.py  matcher.py  normalizer.py  pipeline.py  scorer.py  serialization.py  significance.py
backend/app/features/field_23/services/documents/: __init__.py  article_number.py  pdf.py  upload_split.py
backend/app/features/field_23/services/documents/split_text/: __init__.py  patterns.py  preprocess.py  splitter.py
backend/app/features/field_23/services/llm/: __init__.py  disk_cache.py  embeddings.py
backend/app/features/field_29/: prompt.py  router.py
backend/app/features/field_29/services/: llm_service.py  stage_1_service.py  stage_2_service.py
backend/app/features/field_30/: router.py
backend/app/features/field_30/services/: corpus_service.py  legal_corpus_index.py  table_service.py
backend/app/features/field_4/: config.py  prompt.py  router.py
backend/app/features/field_4/services/: article_splitter.py  body_extractor.py  llm_service.py  pdf_reader.py
backend/app/features/field_6/: README.md  config.py  prompt.py  router.py  schemas.py
backend/app/features/field_6/services/: llm_service.py  web_search.py
backend/app/features/field_7/: config.py  prompt.py  router.py  schemas.py  sdg_data.py
backend/app/features/field_7/services/: llm_service.py
backend/app/features/field_9/: README.md  config.py  prompt.py  router.py  schemas.py
backend/app/features/field_9/services/: eurostat.py  llm_service.py
backend/tests/: test_field23_consultation_report.py  test_field23_split_text.py  test_field29_llm_service.py  test_field29_stage_1_service.py  test_field29_stage_2_service.py  test_field30_table_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  env.d.ts
frontend/src/app/: router.tsx
(+86 files in other folders)
