[project]
name = "ria-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pymupdf>=1.24.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "tavily-python>=0.5.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
