[project]
name = "ria-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.0",
    "fastapi[standard]>=0.136.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "openai>=2.33.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.10.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "scikit-learn>=1.6.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "types-xlrd>=2.0.0.20251020",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/features/field_29/prompt.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["diskcache", "diskcache.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

